--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <link rel="stylesheet"  href="style.css">
     </head>
 <body>
-    <div class="box1"></div>
+    <main>
+    <div class="box"></div>
     <div class="box2"></div>
     <div class="box3"></div>
+    <div class="box4"></div>
+    <div class="box5"></div>
+    <div class="box6"></div>
+    <div class="box7"></div>
+    <div class="box8"></div>
+    <div class="box81"></div>
+    <div class="box82"></div>
+    <div class="box83"></div>
+    <div class="box84"></div>
+    <div class="box85"></div>
+    </main>
+
 
 
 </body>
